--- a/css/common.css
+++ b/css/common.css
@@ -44,6 +44,10 @@ and faster coding, names are selfexplanatory */
     visibility: hidden;
 }
 
+.none {
+    display: none;
+}
+
 .blacktext {
     color: black;
 }
