--- a/css/index.css
+++ b/css/index.css
@@ -1,19 +1,26 @@
     body {
-        background-color: grey;
-        background-image: url(../assets/background2.png);
         background-size: auto;
         background-repeat: no-repeat;
+        min-height: 100%;
+        min-width: 100%;
+    }
+    
+    .videobackground {
+        z-index: -1;
+        position: fixed;
+        right: 0;
+        bottom: 0;
+        min-width: 100%;
+        min-height: 100%;
     }
     
     .cmdContainer {
         background-color: black;
-        width: 100;
-        height: 100;
-        margin-left: 10%;
-        margin-right: 10%;
-        margin-top: 10%;
+        margin-left: 5%;
+        margin-right: 5%;
         border: 1px solid #3B3B3D;
         max-width: 1000px;
+        margin-top: 10%;
     }
     
     .content {
@@ -21,6 +28,7 @@
     }
     
     .header {
+        cursor: move;
         height: 40px;
         background-color: #2B2B2B;
     }
@@ -151,6 +159,16 @@
         50% {
             opacity: 0;
         }
+    }
+    
+    .inputfield {
+        background-color: black;
+        border: none;
+        width: 50px;
+    }
+    
+    .inputfield:focus {
+        outline: none;
     }
     
     .blinker {
