--- a/css/index.css
+++ b/css/index.css
@@ -1,176 +1,180 @@
-    body {
-        background-size: auto;
-        background-repeat: no-repeat;
-        min-height: 100%;
-        min-width: 100%;
-    }
-    
-    .videobackground {
-        z-index: -1;
-        position: fixed;
-        right: 0;
-        bottom: 0;
-        min-width: 100%;
-        min-height: 100%;
-    }
-    
-    .cmdContainer {
-        background-color: black;
-        margin-left: 5%;
-        margin-right: 5%;
-        border: 1px solid #3B3B3D;
-        max-width: 1000px;
-        margin-top: 10%;
-    }
-    
-    .content {
-        height: 510px;
-    }
-    
-    .header {
-        cursor: move;
-        height: 40px;
-        background-color: #2B2B2B;
-    }
-    
-    .icon {
-        margin-top: 8px;
-        margin-left: 8px;
-    }
-    
-    .titleText {
-        font-family: "Calibri";
-        margin-left: 10px;
-        font-size: 22px;
-    }
-    
-    .toolsContainer {
-        width: 97px;
-        margin-right: 31px;
-    }
-    
-    .collapse {
-        width: 13px;
-        height: 0px;
-        border: 1px solid #808080;
-    }
-    
-    .fullscreen {
-        width: 13px;
-        height: 13px;
-        border: 2px solid #808080;
-    }
-    
-    .close {
-        text-align: center;
-        font-size: 40px;
-        font-weight: 100;
-        color: #808080;
-        margin-top: -6px;
-        margin-left: -5px;
-    }
-    
-    .main {
-        height: 470px;
-        margin-left: 1px;
-        overflow: scroll;
-        overflow-x: hidden;
-    }
-    
-    #main::-webkit-scrollbar-track {
-        width: 32px;
-        background-color: #171717;
-    }
-    
-    #main::-webkit-scrollbar-button {
-        background-size: 20px 22px;
-        background-repeat: no-repeat;
-        background-position: center center;
-        background-color: #171717;
-    }
-    
-    #main::-webkit-scrollbar-button:start:decrement {
-        background-image: url(../assets/arrow.png);
-    }
-    
-    #main::-webkit-scrollbar-button:end:increment {
-        background-image: url(../assets/arrowdown.png);
-    }
-    
-    #main::-webkit-scrollbar {
-        width: 32px;
-        margin-left: 1px;
-    }
-    
-    #main::-webkit-scrollbar-thumb {
-        background-color: #4D4D4D;
-        border: 4px solid transparent;
-        background-clip: content-box;
-    }
-    
-    .maincontainer {
-        height: 470px;
-        overflow: hidden;
-    }
-    
-    .arrow {
-        height: 14px;
-        width: 15px;
-        margin-left: 8px;
-        margin-right: 8px;
-        margin-top: 8px;
-        margin-bottom: 10px;
-    }
-    
-    .scrollIndicator {
-        background-color: #4D4D4D;
-        height: 40px;
-        width: 30px;
-        margin-right: 1px;
-        margin-left: 1px;
-    }
-    
-    .conversation {}
-    
-    .message {
-        margin-top: 20px;
-    }
-    
-    .pressany {
-        animation: opacityslow 2s infinite;
-    }
-    
-    @keyframes opacity {
-        0%,
-        33% {
-            opacity: 1;
-        }
-        66%,
-        100% {
-            opacity: 0;
-        }
-    }
-    
-    @keyframes opacityslow {
-        0%,
-        100% {
-            opacity: 1;
-        }
-        50% {
-            opacity: 0;
-        }
-    }
-    
-    .inputfield {
-        background-color: black;
-        border: none;
-        width: 50px;
-    }
-    
-    .inputfield:focus {
-        outline: none;
-    }
-    
-    .blinker {
-        animation: opacity 0.7s infinite;
-    }
+   body {
+       background-size: auto;
+       background-repeat: no-repeat;
+       min-height: 100%;
+       min-width: 100%;
+   }
+   
+   .videobackground {
+       position: fixed;
+       z-index: -1;
+       right: 0;
+       bottom: 0;
+       min-width: 100%;
+       min-height: 100%;
+   }
+   
+   .cmdContainer {
+       background-color: black;
+       border: 1px solid #3B3B3D;
+       max-width: 900px;
+       z-index: 9;
+   }
+   
+   .margin {
+       margin-top: 10%;
+   }
+   
+   .content {
+       height: 510px;
+       z-index: 10;
+   }
+   
+   .header {
+       cursor: move;
+       height: 40px;
+       background-color: #2B2B2B;
+   }
+   
+   .icon {
+       margin-top: 8px;
+       margin-left: 8px;
+   }
+   
+   .titleText {
+       font-family: "Calibri";
+       margin-left: 10px;
+       font-size: 22px;
+   }
+   
+   .toolsContainer {
+       width: 97px;
+       margin-right: 31px;
+   }
+   
+   .collapse {
+       width: 13px;
+       height: 0px;
+       border: 1px solid #808080;
+   }
+   
+   .fullscreen {
+       width: 13px;
+       height: 13px;
+       border: 2px solid #808080;
+   }
+   
+   .close {
+       text-align: center;
+       font-size: 40px;
+       font-weight: 100;
+       color: #808080;
+       margin-top: -6px;
+       margin-left: -5px;
+   }
+   
+   .main {
+       height: 470px;
+       margin-left: 1px;
+       overflow: scroll;
+       overflow-x: hidden;
+   }
+   
+   #main::-webkit-scrollbar-track {
+       width: 32px;
+       background-color: #171717;
+   }
+   
+   #main::-webkit-scrollbar-button {
+       background-size: 20px 22px;
+       background-repeat: no-repeat;
+       background-position: center center;
+       background-color: #171717;
+   }
+   
+   #main::-webkit-scrollbar-button:start:decrement {
+       background-image: url(../assets/arrow.png);
+   }
+   
+   #main::-webkit-scrollbar-button:end:increment {
+       background-image: url(../assets/arrowdown.png);
+   }
+   
+   #main::-webkit-scrollbar {
+       width: 32px;
+       margin-left: 1px;
+   }
+   
+   #main::-webkit-scrollbar-thumb {
+       background-color: #4D4D4D;
+       border: 4px solid transparent;
+       background-clip: content-box;
+   }
+   
+   .maincontainer {
+       height: 470px;
+       overflow: hidden;
+   }
+   
+   .arrow {
+       height: 14px;
+       width: 15px;
+       margin-left: 8px;
+       margin-right: 8px;
+       margin-top: 8px;
+       margin-bottom: 10px;
+   }
+   
+   .scrollIndicator {
+       background-color: #4D4D4D;
+       height: 40px;
+       width: 30px;
+       margin-right: 1px;
+       margin-left: 1px;
+   }
+   
+   .conversation {}
+   
+   .message {
+       margin-top: 20px;
+   }
+   
+   .pressany {
+       animation: opacityslow 2s infinite;
+   }
+   
+   @keyframes opacity {
+       0%,
+       33% {
+           opacity: 1;
+       }
+       66%,
+       100% {
+           opacity: 0;
+       }
+   }
+   
+   @keyframes opacityslow {
+       0%,
+       100% {
+           opacity: 1;
+       }
+       50% {
+           opacity: 0;
+       }
+   }
+   
+   .inputfield {
+       background-color: black;
+       border: none;
+       width: 100%;
+       font-size: 16px;
+   }
+   
+   .inputfield:focus {
+       outline: none;
+   }
+   
+   .blinker {
+       animation: opacity 0.7s infinite;
+   }
