--- a/css/mediaqueries.css
+++ b/css/mediaqueries.css
@@ -1,7 +1,44 @@
-/* Media query */
+@media (max-width: 950px) {
+    .cmdContainer {
+        max-width: 800px;
+    }
+}
 
-@media (max-width: 600px) {
+@media (max-width: 830px) {
+    .cmdContainer {
+        max-width: 700px;
+    }
+}
+
+@media (max-width: 730px) {
+    .cmdContainer {
+        max-width: 600px;
+    }
+}
+
+@media (max-width: 630px) {
+    .cmdContainer {
+        max-width: 500px;
+    }
+}
+
+@media (max-width: 530px) {
+    .cmdContainer {
+        max-width: 400px;
+    }
+}
+
+@media (max-width: 430px) {
+    .cmdContainer {
+        max-width: 300px;
+    }
     .titleText {
-        font-size: 10px;
+        font-size: 15px;
+    }
+}
+
+@media (max-width: 330px) {
+    .cmdContainer {
+        max-width: 300px;
     }
 }
