--- a/css/index.css
+++ b/css/index.css
@@ -18,7 +18,7 @@
        background-color: black;
        border: 1px solid #3B3B3D;
        max-width: 900px;
-       z-index: 9;
+       width: 900px;
    }
    
    .margin {
@@ -27,7 +27,6 @@
    
    .content {
        height: 510px;
-       z-index: 10;
    }
    
    .header {
@@ -74,6 +73,7 @@
    }
    
    .main {
+       width: 100%;
        height: 470px;
        margin-left: 1px;
        overflow: scroll;
