--- a/css/index.css
+++ b/css/index.css
@@ -3,6 +3,7 @@
        background-repeat: no-repeat;
        min-height: 100%;
        min-width: 100%;
+       overflow: hidden;
    }
    
    .videobackground {
@@ -169,6 +170,7 @@
        border: none;
        width: 100%;
        font-size: 16px;
+       opacity: 1;
    }
    
    .inputfield:focus {
