--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,5 @@
+   /* Css for body, removes overflow */
+   
    body {
        background-size: auto;
        background-repeat: no-repeat;
@@ -5,6 +7,8 @@
        min-width: 100%;
        overflow: hidden;
    }
+   /* Css for the videobackground, makes sure it sticks in place
+    and covers the entire screen even for smaller screens */
    
    .videobackground {
        position: fixed;
@@ -14,6 +18,7 @@
        min-width: 100%;
        min-height: 100%;
    }
+   /* Main container for the website */
    
    .cmdContainer {
        background-color: black;
@@ -21,48 +26,57 @@
        max-width: 900px;
        width: 900px;
    }
+   /* Sets margin for elements */
    
    .margin {
        margin-top: 10%;
    }
+   /* Defines height of the content */
    
    .content {
        height: 510px;
    }
+   /* Styles the header and gives it the cursor "move */
    
    .header {
        cursor: move;
        height: 40px;
        background-color: #2B2B2B;
    }
+   /* Defines size of the window icon */
    
    .icon {
        margin-top: 8px;
        margin-left: 8px;
    }
+   /* Defines text of the title and margin and font-size */
    
    .titleText {
        font-family: "Calibri";
        margin-left: 10px;
        font-size: 22px;
    }
+   /* Defines posistion of the different tools */
    
    .toolsContainer {
        width: 97px;
        margin-right: 31px;
    }
+   /* css for the collapse icon */
    
    .collapse {
        width: 13px;
        height: 0px;
        border: 1px solid #808080;
    }
+   /* css for the fullscreen icon */
    
    .fullscreen {
        width: 13px;
        height: 13px;
        border: 2px solid #808080;
    }
+   /* css for the close icon */
    
    .close {
        text-align: center;
@@ -72,6 +86,7 @@
        margin-top: -6px;
        margin-left: -5px;
    }
+   /* css for the main window, defines scroll functions */
    
    .main {
        width: 100%;
@@ -80,6 +95,13 @@
        overflow: scroll;
        overflow-x: hidden;
    }
+   /* Defines css of the maincontainer */
+   
+   .maincontainer {
+       height: 470px;
+       overflow: hidden;
+   }
+   /* Defines css for the scrollbar */
    
    #main::-webkit-scrollbar-track {
        width: 32px;
@@ -111,11 +133,7 @@
        border: 4px solid transparent;
        background-clip: content-box;
    }
-   
-   .maincontainer {
-       height: 470px;
-       overflow: hidden;
-   }
+   /* Defines css for the different arrows on the scroll bar */
    
    .arrow {
        height: 14px;
@@ -125,6 +143,7 @@
        margin-top: 8px;
        margin-bottom: 10px;
    }
+   /* Defines css for the scrollbars indicator */
    
    .scrollIndicator {
        background-color: #4D4D4D;
@@ -133,16 +152,36 @@
        margin-right: 1px;
        margin-left: 1px;
    }
-   
-   .conversation {}
-   
-   .message {
-       margin-top: 20px;
-   }
+   /* Defines css for the pressany text and gives it the animation */
    
    .pressany {
        animation: opacityslow 2s infinite;
    }
+   /* Defines css for the preamde messages */
+   
+   .message {
+       margin-top: 20px;
+   }
+   /* Css for the input field, styling */
+   
+   .inputfield {
+       background-color: black;
+       border: none;
+       width: 100%;
+       font-size: 16px;
+       opacity: 1;
+   }
+   /* Removes the outline on focus for the input field */
+   
+   .inputfield:focus {
+       outline: none;
+   }
+   /* General blinker style for use on multiple elements if needed */
+   
+   .blinker {
+       animation: opacity 0.7s infinite;
+   }
+   /* Keyframe animations for the different blinks */
    
    @keyframes opacity {
        0%,
@@ -163,20 +202,4 @@
        50% {
            opacity: 0;
        }
-   }
-   
-   .inputfield {
-       background-color: black;
-       border: none;
-       width: 100%;
-       font-size: 16px;
-       opacity: 1;
-   }
-   
-   .inputfield:focus {
-       outline: none;
-   }
-   
-   .blinker {
-       animation: opacity 0.7s infinite;
    }
